--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@ header {
     margin: 0;
 }
 
-.logo {background: url(../images/reume.jpeg);
+.logo {background: url(../assets/images/reume.jpeg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
