--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
+/*-------------------------------Colors*/
 .bg-color-name-title {
-    background-color: blue;
+    background-color: #676767;
+
 }
+
+.ui-menu-color-home {
+    border-color: #e67e22;
+}
+
+.ui-menu-color-resume {
+    border-color: #9b59b6;
+}
+
+.ui-menu-color-contact {
+    border-color: #3498db;
+}
+
+.ui-menu-color-download {
+    border-color: #525252;
+}
+
+/*-------------------------------Heading*/
 
 header {
     margin: 0;
+}
+
+.heading {
+    margin-left: 50px;
 }
 
 .logo {background: url(../assets/images/reume.jpeg);
@@ -17,3 +41,21 @@ header {
         -moz-transition: all .5s ease-in-out;
         -webkit-transition: all .5s ease-in-out;
 }
+
+.name{
+    font-family: "Exo", sans-serif;
+    font-weight: 100;
+    font-size: 46px;
+    margin-top: 50px;
+    color: #fff;
+}
+
+.title {
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-size: 28px;
+    margin-top: 20px;
+    margin-bottom: 90px;
+    color: #fff;
+}
+
