--- a/assets/style.css
+++ b/assets/style.css
@@ -7,19 +7,19 @@
 }
 
 .ui-menu-color-home {
-    border-color: #e67e22;
+    background-color: #e67e22;
 }
 
 .ui-menu-color-resume {
-    border-color: #9b59b6;
+    background-color: #9b59b6;
 }
 
 .ui-menu-color-contact {
-    border-color: #3498db;
+    background-color: #3498db;
 }
 
 .ui-menu-color-download {
-    border-color: #525252;
+    background-color: #525252;
 }
 
 /*-------------------------------Heading*/
@@ -29,20 +29,20 @@ header {
 }
 
 .heading {
-    margin-left: 50px;
+    margin-left: 20px;
 }
 
 .logo {background: url(../assets/images/reume.jpeg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        min-height: 360px;
-        transition: all .5s ease-in-out;
-        -moz-transition: all .5s ease-in-out;
-        -webkit-transition: all .5s ease-in-out;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 360px;
+    transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
 }
 
-.name{
+.name {
     font-family: "Exo", sans-serif;
     font-weight: 100;
     font-size: 46px;
@@ -57,5 +57,40 @@ header {
     margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
+}
+
+.list-inline-item:not(:last-child) {
+    margin: 0;
+}
+
+.menucontainer {
+    font-size: 0;
+}
+
+#nav li {
+    font-size: 14px;
+    padding: 0;
+}
+
+
+
+.menuitem {
+    height: 120px;
+    text-align:center;
+    padding: 0;
+}
+
+.menuitem a {
+    width: 100%;
+    text-decoration: none;
+    color: #fff;
+    height: 120px;
+}
+
+.menuitem a i {
+    padding-top: 22px;
+    display: block;
+    color: #fafafa;
+    font-size: 26px;
 }
 
