--- a/assets/style.css
+++ b/assets/style.css
@@ -94,3 +94,22 @@ header {
     font-size: 26px;
 }
 
+.menuitem span {
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+#nav {margin: 0;}
+
+/*-------------------------------hover*/
+
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
+    height: 120px;
+}
