--- a/assets/style.css
+++ b/assets/style.css
@@ -35,6 +35,10 @@ h1, h2, h3, h4 {
     font-weight: 300;
     color: #fafafa;
 }
+
+.inline-block {
+    display:inline-block;
+}
 /*-------------------------------Heading*/
 
 header {
