--- a/assets/style.css
+++ b/assets/style.css
@@ -139,3 +139,13 @@ footer {
     min-height: 120px;
     margin:0
 }
+
+.cv-pdf i {
+    font-size: 18px;
+    color: #fafafa;
+    text-align: center;
+    padding-left: 5px;
+    transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out;
+}
