--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
+/*--------------------------------------------Colors*/
 
-/*-------------------------------Colors*/
 .bg-color-name-title {
     background-color: #676767;
+}
 
+.bg-color-three-reasons {
+    background-color: #fff;
 }
 
 .ui-menu-color-home {
@@ -22,34 +24,75 @@
     background-color: #525252;
 }
 
-/*-------------------------------special paddings/margins/text*/
+.row-table {
+    display: table;
+}
 
-h1, h2, h3, h4 {
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+/* ----------------------------------------Special paddings/margins/text */
+
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
 }
 
-.uppercase {text-transform: uppercase;}
+.uppercase {
+    text-transform: uppercase;
+}
 
-.general-sub{
+.general-sub {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
 }
 
 .inline-block {
-    display:inline-block;
+    display: inline-block;
 }
-/*-------------------------------Heading*/
+
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
 }
 
 .heading {
-    margin-left: 20px;
+    margin-left: 50px;
 }
 
-.logo {background: url(../assets/images/reume.jpeg);
+.logo {
+    background: url("../assets/images/reume.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -89,11 +132,13 @@ header {
     padding: 0;
 }
 
-
+#nav {
+    margin: 0;
+}
 
 .menuitem {
     height: 120px;
-    text-align:center;
+    text-align: center;
     padding: 0;
 }
 
@@ -122,22 +167,20 @@ header {
     letter-spacing: 2px;
 }
 
-#nav {margin: 0;}
-
-/*-------------------------------hover*/
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/*-------------------------------footer*/
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
     color: #fafafa;
     min-height: 120px;
-    margin:0
+    margin: 0;
 }
 
 .cv-pdf i {
@@ -156,29 +199,40 @@ footer {
 }
 
 .social-links {
-padding-bottom: 15px;
+    padding-bottom: 15px;
 }
 
 .social-links li a i {
     width: 32px;
     height: 32px;
-    padding: 12px;
+    padding: 12px 0;
     border-radius: 50%;
     font-size: 13px;
     line-height: 7px;
     text-align: center;
     color: #fafafa;
-    background:#8f8f8f;
+    background: #8f8f8f;
+    transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
 
-.social-links li a i:hover{
-    background:#e84610;
+.social-links li a i:hover {
+    background: #e84610;
 }
-
 
 #footer-details {
     padding: 20px;
+}
+
+/* ----------------------------------------3 reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color:#e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
