--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,11 @@
     background-color: #fff;
 }
 
+.bg-color-personal-info {
+    background-color: #effbff;
+
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
