add intersts and git hub with correct colors.

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,8 @@
 
 }
 
+
+
 .bg-color-contact{
     background-color: #fff;
 }
@@ -32,6 +34,16 @@
 .ui-menu-color-download {
     background-color: #525252;
 }
+
+.ui-menu-color-github {
+    background-color: #e84610;
+}
+
+.ui-menu-color-interests{
+    background-color: darkseagreen;
+}
+
+
 
 .row-table {
     display: table;
