add js for git hub api

--- a/assets/style.css
+++ b/assets/style.css
@@ -418,3 +418,20 @@ footer {
 }
 
 div#map {min-height: 360px;}
+
+/*--------------------------------------------Media Queries*/
+
+@media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
+}
